src/snapshots/aidl_parser__tests__method_oneway.snap
---
source: src/lib.rs
expression: res

---
Method(
  oneway: true,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  args: [],
  annotations: [],
  doc: None,
  symbol_range: "...",
  full_range: "...",
)
