src/snapshots/aidl_parser__tests__parcelable_with_javadoc.snap
---
source: src/lib.rs
expression: res

---
Parcelable(
  name: "Tomato",
  members: [],
  annotations: [],
  doc: Some("Parcelable documentation"),
  full_range: "...",
  symbol_range: "...",
)
